# s3proxy

./: .cfignore  .env.ci  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Procfile  README.md  app.py  buildpack.json  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  makefile  manage.py  manifest.yml  pii-secret-exclude.txt  pyproject.toml  requirements.in  requirements.txt  requirements_test.in  requirements_test.txt  sso_server.py  test.py
.circleci/: config.yml
.copilot/: config.yml
.github/workflows/: dependabot-requirements.yaml  test.yml
codebuild/web/: buildspec.yml
config/: urls.py  wsgi.py
config/settings/: base.py  prod.py
copilot/: process.yml
copilot/web/: buildspec.yml
docker/: Dockerfile.dev  Dockerfile.sso
file_proxy/: apps.py  views.py
pingdom/: services.py
requirements/: base.txt  dev.txt  prod.txt
requirements.in/: base.in  dev.in  prod.in
setup/: init.sql
user/: apps.py  backends.py
