[tool.poetry]
name = "s3proxy"
version = "0.1.0"
description = "Proxy server for allowing HTTP access to S3 objects only to requests authenticated against SSO"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
redis = "^4.4.2"
requests = "^2.28.2"
urllib3 = "^1.26.18"
boto3 = "^1.26.60"
gevent = "^23.9.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
detect-secrets = "^1.4.0"
types-redis = "^4.4.0.3"
types-requests = "^2.28.11.8"
types-boto3 = "^1.0.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
pii-security-check-hooks = {git = "https://github.com/uktrade/pii-secret-check-hooks.git"}
pre-commit = "^3.0.2"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[[tool.mypy.overrides]]
module = "mypy-gevent.*"
ignore_missing_imports = true
